# yasi

./: pyproject.toml
.github/workflows/: deploy.yaml  test.yaml
ipy_yasi/: _modidx.py  client.py  core.py  dialog.py
nbs/: 00_core.ipynb  01_dialog.ipynb  02_client.ipynb  03_ui.ipynb  04_magics.ipynb  index.ipynb
yasi/: _modidx.py  client.py  core.py  dialog.py  magics.py  ui.py
